# status-slayer

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  controller.rs  generator.rs  lib.rs  protocol.rs
tests/: config-example.toml  stslayer_test.rs
