[package]
name = "stslayer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
signal-hook = "0.3.17"
toml = "0.8.19"

[dev-dependencies]
assert_cmd = { version = "2.0.16", features = ["color-auto"] }
pretty_assertions = "1.4.1"
regex = "1.11.1"
rstest = "0.23.0"
wait-timeout = "0.2.0"
